<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:padding="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/pineappledemo"
            android:gravity="start"
            android:visibility="gone"
            android:text="@string/login"
            android:textColor="@color/White"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">


            <ImageView
                android:layout_width="60dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:transitionName="splashtrans" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="8dp"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAllCaps="false"
                    android:textStyle="normal|italic" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/White"
                    android:textStyle="normal|italic" />
            </android.support.design.widget.TextInputLayout>

            <!--login-->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/login"
                android:textColor="@color/White" />
            <!--signup-->
            <TextView
                android:id="@+id/signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/pineappledemo"
                android:gravity="center"
                android:text="@string/no_account_yet_create_one"
                android:textColor="@color/White"
                android:textSize="20sp" />
            <!--confirm password-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/check_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"
                    android:textStyle="normal|italic"
                    android:visibility="gone"
                    app:passwordToggleEnabled="true" />
            </android.support.design.widget.TextInputLayout>
            <!--name-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textStyle="normal|italic"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/signup"
                android:textColor="@color/White"
                android:visibility="gone" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>